--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,12 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card *ngIf="worker !== undefined" >
+    <ion-card-header>
+      Hello {{worker.name}}!!
+    </ion-card-header>
+    <ion-card-content>
 
+    </ion-card-content>
+  </ion-card>
 </ion-content>
